# robo-service

./: README.md  instruction.txt
komodo_bringup/: CMakeLists.txt~  package.xml  package.xml~
komodo_gazebo/: CMakeLists.txt  package.xml  package.xml~
komodo_gazebo/config/: komodo_control.yaml  komodo_control.yaml~  komodo_control_trajectory.yaml  komodo_control_trajectory.yaml~  komodo_gazebo_rviz.rviz
komodo_gazebo/launch/: AIlab.launch  AIlab.launch~  komodo_bookshelves_world.launch  komodo_control.launch  komodo_control_trajectory.launch~  komodo_empty_world.launch  komodo_empty_world.launch~  komodo_empty_world_new.launch~  komodo_gazebo.launch~  komodo_test_trajectory.launch  komodo_test_trajectory.launch~  komodo_trajectory_control.launch  komodo_trajectory_control.launch~
komodo_gazebo/launch/worlds_launch/: komodo_kitchen_world.launch
komodo_gazebo/robots/: CMakeLists.txt~  komodo_1_elevator.URDF  komodo_1_elevator.URDF~  komodo_elevator (copy).URDF  komodo_elevator (komodo_0).URDF  komodo_elevator.URDF  komodo_elevator.URDF~  komodo_temp.URDF
komodo_gazebo/robots/meshes_elevator/: komodo_Right_URF_link.stl  komodo_elbow1_link.stl  komodo_sensors_unit_link.stl  komodo_shoulder_link.stl
komodo_gazebo/src/: komodo_test_trajectory.cpp~
komodo_gazebo/worlds/: AIlab.world  AIlab.world~  BuildingDefaultName.sdf  TestWorld1.world~  bookshelves.world  elevator.world  elevator.world~  komodo_kitchen.world
komodo_moveit_gen/: .setup_assistant  CMakeLists.txt  instruction.txt~  package.xml
komodo_planning/: CMakeLists.txt  package.xml  package.xml~
(+271 files in other folders)
